# local-wiki

./: .gitignore  README.md  local-wiki.code-workspace  main.py  pyproject.toml
.deploy/: index.html  listings.json  search.json
.deploy/notebooks/: first_notebook_test.html  index.html
.deploy/wiki/: index.html
.deploy/wiki/linux/: index.html  nginx.html
scripts/: publish.ps1  publish.sh
site/: search.json
site/notebooks/: index.html
site/wiki/: index.html
src/: _deploy.yml  _metadata.yml  _quarto.yml  index.qmd
src/_templates/: page.md
src/local_wiki/: cli.py  new_page.py
src/local_wiki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/notebooks/: first_notebook_test.ipynb  index.qmd
src/site/: index.html  search.json
src/site/notebooks/: first_notebook_test.html  index.html
src/site/wiki/: index.html
src/site/wiki/linux/: index.html  nginx.html
src/wiki/: index.qmd
src/wiki/AI_Agents/: automation-scripts.qmd  case-study-automation.qmd  index.qmd  librechat-setup.qmd  mcp-raspi-setup.qmd  mcp-technical-guide.qmd  raspberry-pi-5-mcp.qmd  system-status.qmd
src/wiki/Linux/: index.qmd  proxy-buffering-fix.qmd
src/wiki/Linux/Services_APIs/: index.qmd  nginx.qmd  smb-fileserver.md
src/wiki/Linux/Services_APIs/ssh/: ssh-1password-config.md
src/wiki/Programming/: index.qmd
src/wiki/Programming/Markdown/: index.qmd
src/wiki/Programming/Markdown/topics/: cheatsheet.qmd
src/wiki/Programming/Python/: index.qmd
src/wiki/Programming/R/: index.qmd
src/wiki/linux/: index.qmd
(+4 files in other folders)
